[AOD-458] Fix dropdown-content z-index with respect to AppMenu

--- a/app/components/Dropdown/Dropdown.scss
+++ b/app/components/Dropdown/Dropdown.scss
@@ -3,7 +3,7 @@
 .Dropdown {
   height: 100%;
   position: relative;
-  z-index: z(dropdown);
+  z-index: 1;
 
   &:focus {
     outline: none;
@@ -54,7 +54,7 @@
   text-transform: none;
   top: 100%;
   will-change: transform, opacity;
-  z-index: 10;
+  z-index: z(dropdown);
 
   li {
     min-width: 100%;
