--- a/app/topologies/AppMenu/AppMenu.scss
+++ b/app/topologies/AppMenu/AppMenu.scss
@@ -9,6 +9,7 @@
   overflow-x: hidden;
   overflow-y: auto;
   pointer-events: all;
+  z-index: z(app-menu);
 
   &--floating {
     box-shadow: $box-shadow--intense;
